apps/automation/mqtt/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mqtt
  name: mqtt
  namespace: automation  
spec:
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
        - name: mqtt
          image: eclipse-mosquitto:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1883
              name: mqtt-1883
              protocol: TCP
            - containerPort: 9001
              name: mqtt-9001
              protocol: TCP              
          readinessProbe:
            failureThreshold: 3
            httpGet:
              port: 1883
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 1883
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /mosquitto/data
              name: mqtt-pv
      volumes:
        - name: mqtt-pv
          persistentVolumeClaim:
            claimName: mqtt-pvc
