apps/automation/mqtt/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-mqtt
  namespace: automation
spec:
  ports:
    - port: 1883
      protocol: TCP
      targetPort: mqtt-1883
  selector:
    app: mqtt
